# cate

./: .gitignore  README.md  pyproject.toml  temp.py
.github/workflows/: build.yaml  lint.yaml  push.yaml  test.yaml
cate/: __init__.py  dataset.py  evaluate.py  metrics.py  plot.py
cate/app/: index.py
cate/base/: metrics.py
cate/base/inference/: __init__.py  base.py  meta.py
cate/base/metrics/: __init__.py  artifacts.py  evaluate.py  metrics.py
cate/inference/meta/: __init__.py  base.py  slearner.py  tlearner.py  xlearner.py
cate/infra/: mlflow.py
cate/metrics/: __init__.py  evaluate.py  metrics.py
cate/mlflow/: metrics
cate/model/: __init__.py  dataset.py  evaluate.py  metrics.py  mlflow.py  plot.py
cate/utils/: __init__.py  line.py  log.py  path.py  slack.py  time.py  utils.py
dev/: temp.ipynb
dev/configs/test/: config.yaml
dev/dev/: calibration.ipynb  cevae.ipynb  download_lenta.ipynb  download_sklift_datasets.ipynb  generator.ipynb  kfold.ipynb  line_message_sending.ipynb  logger.ipynb  mlflow.ipynb  mlflow_client.ipynb  mlflow_evaluate.ipynb  mlflow_evaluation.ipynb  mlflow_gc.ipynb  mlflow_log_metrics.ipynb  parse_config.ipynb  protocol.ipynb  slack.ipynb  synthetic_data.ipynb  timer.ipynb
dev/dev/hydra/: config_store.ipynb  config_store.py  multirun.py
dev/dev/hydra/conf/: config.yaml
dev/dev/hydra/conf/hydra/: sweeper.yaml
dev/dev/hydra/conf/model/: model.yaml
dev/dev/mlflow/: add_parent_run.ipynb  client.ipynb  evaluate.ipynb  evaluation.ipynb  gc.ipynb  log_metrics.ipynb  search_run.ipynb  upload_datasets.ipynb
dev/dev/polars/: filter.ipynb  get_item.ipynb  to_rank.ipynb
dev/dev/pytorch/: criterion.ipynb  dataset.ipynb  layer.ipynb  train_classification.ipynb
dev/dev/sklearn/: calibration.ipynb  dummy_model.ipynb  kfold.ipynb  synthetic_data.ipynb
dev/dev/temp/: tg_cg_split.ipynb
dev/eda/: add_parent_run.ipynb  causalml.ipynb  dataset_static.ipynb  dataset_stats.ipynb  default_model.ipynb  download_lenta.ipynb  explor_dataset.ipynb  fit_model.ipynb  linear_model.ipynb  logger.ipynb  metalearner_postprocess.ipynb  mlflow_output.ipynb  output.ipynb  stats_criteo.ipynb  stats_lenta.ipynb  test_dataset.ipynb  upload_datasets.ipynb
dev/eda/data_stats/: criteo.ipynb
dev/eda/metalearner/: causalml.ipynb  default_model.ipynb
dev/eda/obp/: causalml.ipynb
dev/eda/output/: add_parent_run.ipynb  base_pattern.ipynb  biased_data.ipynb  dataset_stats.ipynb  mlflow.ipynb  mlflow_output.ipynb  output.ipynb
dev/eda/output/data_stats/: lenta.ipynb
dev/process/model/: biased_data.py  metalearner.py  small_data.py  temp.py
dev/process/preprocess/: to_dataset.py
dev/process/shape/: from_skuplift.py  lenta.py
dev/process/test/: __main__.py
dev/process/test/conf/: config.yaml
docs/: inference.md  metrics.md  models.md  plot.md
docs/coverage/: coverage.xml
docs/design/process/: classification.md
docs/research/: definitions.md  papars.md  quick_start.md
docs/research/metalearner/: list  metalearner.md  papers.md
env/: setup.sh
output/datasets_stats/: base_stats.csv
process/model/base_pattern/: __main__.py  metalearner.py  run.sh
process/model/base_pattern/conf/: config.yaml
process/model/base_pattern/scripts/: train.py
process/model/biased_data/: __main__.py  run.sh
process/model/biased_data/conf/: config.yaml
process/model/biased_data/scripts/: train.py
process/model/classification/: __main__.py  run.sh
process/model/classification/conf/: config.yaml
process/model/classification/scripts/: train.py
process/model/pytorch_classification/: __main__.py
process/model/pytorch_classification/conf/: config.yaml
process/model/pytorch_classification/scripts/: dataset.py  experiment.py  model.py  train.py
process/model/small_data/: __main__.py
process/model/small_data.py/: __main__.py
process/model/small_data/conf/: config.yaml
process/model/small_data/scripts/: train.py
process/preprocess/: to_dataset.py
process/shape/: download.py
tests/: test_to_rank.py
tests/dataset/: test_concat.py  test_dataset.py  test_filter.py  test_sample.py  test_split.py  test_synthetic_data.py  test_to_rank.py
tests/evaluate/: test_auuc.py  test_qini_by_percentile.py  test_uplift_by_percentile.py  test_uplift_curve.py
tests/inference/meta/: test_slearner.py  test_tlearner.py
tests/infra/: test_mlflow.py
tests/metrics/: test_auuc.py  test_uplift_by_percentile.py
tests/model/: test_to_rank.py
tests/model/evaluate/: test_auuc.py  test_evaluate.py  test_qini_by_percentile.py  test_uplift_by_percentile.py  test_uplift_curve.py
tests/model/metrics/: test_auuc.py
tests/utils/: test_path.py
