[tool.poetry]
name = "cate"
version = "0.1.0"
description = "causal inference research"
authors = ["YuriNakayama"]
readme = "README.md"

packages = [
    { include = "cate" },
]

[tool.poetry.dependencies]
python = "^3.11"
kaggle = "^1.5.16"
pandas = "^2.0.3"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.1"
mlflow = "^2.16.0"
boto3 = "^1.35.19"
lightgbm = "^4.5.0"
causalml = {extras = ["torch"], version = "^0.15.2"}
scipy = "1.13.1"
scikit-uplift = "^0.5.1"
click = "^8.1.7"
pynvml = "^11.5.3"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
mypy = "^1.7.0"
ipykernel = "^6.26.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
case-sensitive = true

[mypy]
exclude = [".venv", ".github", "data", "docs", "env"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_decorated = false
disallow_any_unimported = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = [
    '--rootdir=tests',
    '--strict-config',
    '-ra',
]
testpaths = ['tests']
cache_dir = "tests/.pytest_cache"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["dev", "cate", "tests"]
exclude = []