[tool.poetry]
name = "cate"
version = "0.1.0"
description = "causal inference research"
authors = ["YuriNakayama"]
readme = "README.md"

packages = [
    { include = "cate" },
    { include = "process" }
]

[tool.poetry.dependencies]
python = "^3.11"
kaggle = "^1.5.16"
pandas = "^2.0.3"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.1"
mlflow = "^2.16.0"
boto3 = "^1.35.19"
lightgbm = "^4.5.0"
causalml = {extras = ["torch"], version = "^0.15.2"}
scipy = "1.13.1"
scikit-uplift = "^0.5.1"
click = "^8.1.7"
pynvml = "^11.5.3"
pytest = "^8.3.3"
pylint = "^3.3.1"
pytest-coverage = "^0.0"
hydra-core = "^1.3.2"
line-bot-sdk = "^3.14.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
mypy = "^1.7.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
exclude = [".venv", ".github", "data", "docs", "env", "outputs"]
python_version = "3.11"
strict = true
disallow_any_decorated = false
disallow_any_unimported = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_unreachable = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
addopts = [
    '--rootdir=tests',
    '--strict-config',
    '--cov=cate',
    '-ra',
]
testpaths = ['tests']
cache_dir = "tests/.pytest_cache"

[tool.coverage.run]
branch = true
omit = [
    "**/__init__.py",
]

[tool.coverage.xml]
output = "docs/coverage/coverage_report.xml"

[tool.pyright]
include = ["dev", "cate", "tests", "process"]
exclude= [
    "data",
    "docs",
    ".venv",
    "outputs",
    "**/traces",
    "**/traces_ts",
    "**/example_files**",
    "**/.pkl",
    "**/bazel-bin",
    "**/bazel",
    "apps/**",
    "**/resources/**",
    "**/tests/**",
    "**/node_modules",
    "**/.next",
    "**/__pycache__",
    "**/.coverage/**",
    "**/.git",
    "**/dist/**",
    "**/build/**",
    "**/.husky",
    "**/migrations"
]
ignore= [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "**/dist",
    "**/.vscode",
    "**/*.pyi",
    "**/__init__.py"
]
typeCheckingMode = "basic"

[tool.pylint]
ignore-paths = [
    ".venv", ".github", "data", "docs", "env", "outputs"
]